<?xml version="1.1" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--поле результата-->
    <TextView
        android:id="@+id/resultField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:gravity="end"
        android:text="@string/_0"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operationField" />
    <!--поле операций-->
    <TextView
        android:id="@+id/operationField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/resultField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberField"
        app:layout_constraintTop_toTopOf="parent" />
    <!--поле знака-->
    <TextView
        android:id="@+id/numberField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/resultField"
        app:layout_constraintEnd_toStartOf="@+id/operationField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--цифры-->
    <Button
        android:id="@+id/_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_4"
        app:layout_constraintEnd_toStartOf="@+id/_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultField" />

    <Button
        android:id="@+id/_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_2"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_5"
        app:layout_constraintEnd_toStartOf="@+id/_3"
        app:layout_constraintStart_toEndOf="@+id/_1"
        app:layout_constraintTop_toBottomOf="@id/resultField" />

    <Button
        android:id="@+id/_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_6"
        app:layout_constraintEnd_toStartOf="@+id/_div"
        app:layout_constraintStart_toEndOf="@+id/_2"
        app:layout_constraintTop_toBottomOf="@id/resultField" />

    <Button
        android:id="@+id/_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_4"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_7"
        app:layout_constraintEnd_toStartOf="@+id/_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_1" />

    <Button
        android:id="@+id/_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_5"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_8"
        app:layout_constraintEnd_toStartOf="@+id/_6"
        app:layout_constraintStart_toEndOf="@+id/_4"
        app:layout_constraintTop_toBottomOf="@+id/_2" />

    <Button
        android:id="@+id/_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_6"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_9"
        app:layout_constraintEnd_toStartOf="@+id/_mult"
        app:layout_constraintStart_toEndOf="@+id/_5"
        app:layout_constraintTop_toBottomOf="@+id/_3" />

    <Button
        android:id="@+id/_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_7"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_point"
        app:layout_constraintEnd_toStartOf="@+id/_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_4" />

    <Button
        android:id="@+id/_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_8"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_0"
        app:layout_constraintEnd_toStartOf="@+id/_9"
        app:layout_constraintStart_toEndOf="@+id/_7"
        app:layout_constraintTop_toBottomOf="@+id/_5" />

    <Button
        android:id="@+id/_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_9"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_point"
        app:layout_constraintEnd_toStartOf="@+id/_minus"
        app:layout_constraintStart_toEndOf="@+id/_8"
        app:layout_constraintTop_toBottomOf="@+id/_6" />

    <Button
        android:id="@+id/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toStartOf="@+id/_equal"
        app:layout_constraintStart_toEndOf="@+id/_point"
        app:layout_constraintTop_toBottomOf="@+id/_8" />

    <Button
        android:id="@+id/_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:onClick="Number_onClick"
        android:text="@string/_point"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toStartOf="@+id/_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_7" />
    <!--действия-->
    <Button
        android:id="@+id/_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:onClick="Operation_onClick"
        android:text="@string/_div"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/_3"
        app:layout_constraintTop_toBottomOf="@+id/resultField" />

    <Button
        android:id="@+id/_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:onClick="Operation_onClick"
        android:text="@string/_mult"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/_6"
        app:layout_constraintTop_toBottomOf="@+id/_div" />

    <Button
        android:id="@+id/_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:onClick="Operation_onClick"
        android:text="@string/_minus"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/_9"
        app:layout_constraintTop_toBottomOf="@+id/_mult" />

    <Button
        android:id="@+id/_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:onClick="Operation_onClick"
        android:text="@string/_plus"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/_equal"
        app:layout_constraintTop_toBottomOf="@+id/_minus" />

    <Button
        android:id="@+id/_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:onClick="Operation_onClick"
        android:text="@string/_equal"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toStartOf="@id/_plus"
        app:layout_constraintStart_toEndOf="@+id/_0"
        app:layout_constraintTop_toBottomOf="@+id/_9" />

</androidx.constraintlayout.widget.ConstraintLayout>